--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "tsc && node dist/app.js",
+		"start": "tsc && /bin/bash -c 'ulimit -s 65500; exec /usr/local/bin/node --stack-size=65500 dist/app.js'",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
